--- a/index.html
+++ b/index.html
@@ -36,22 +36,36 @@
 
         <!-- Draft Screen -->
         <div id="draft-screen" class="hidden">
-            <h2 class="font-bangers text-4xl text-center mb-6">Team Draft</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="md:col-span-2 bg-white p-4 rounded-lg shadow-md">
+            <h2 class="font-bangers text-4xl text-center mb-6">League Draft</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
+                <!-- Draft Info & Log -->
+                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
+                    <div class="text-center p-4 border-b mb-4">
+                         <p id="draft-clock-pick" class="text-sm text-gray-500">Round 1, Pick 1</p>
+                         <h3 id="draft-clock-team" class="text-xl font-bold">Team on the Clock</h3>
+                    </div>
+                    <h4 class="font-bold mb-2">Draft Log</h4>
+                    <ul id="draft-log" class="space-y-2 max-h-[45vh] overflow-y-auto text-sm">
+                        <!-- Draft picks will be logged here -->
+                    </ul>
+                </div>
+                
+                <!-- Player Pool -->
+                <div class="lg:col-span-2 bg-white p-4 rounded-lg shadow-md">
                     <h3 class="text-xl font-bold mb-4">Available Players</h3>
-                    <div id="player-pool" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 max-h-[60vh] overflow-y-auto p-2">
+                    <div id="player-pool" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 max-h-[60vh] overflow-y-auto p-2">
                         <!-- Player cards will be inserted here by JS -->
                     </div>
                 </div>
-                <div class="bg-white p-4 rounded-lg shadow-md">
+
+                <!-- Your Roster & Action -->
+                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
                     <h3 class="text-xl font-bold mb-2">Your Roster</h3>
-                    <p id="draft-status" class="text-sm text-gray-500 mb-4">Pick 1 of 10</p>
-                    <ul id="team-roster" class="space-y-2">
+                    <ul id="team-roster" class="space-y-2 max-h-[45vh] overflow-y-auto">
                         <!-- Roster list items will be inserted here by JS -->
                     </ul>
                     <div class="mt-6">
-                        <button id="draft-player-btn" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-600 transition">Draft Selected Player</button>
+                        <button id="draft-player-btn" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-600 transition disabled:bg-gray-400">Draft Selected Player</button>
                     </div>
                 </div>
             </div>
