--- a/index.html
+++ b/index.html
@@ -33,33 +33,53 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Team Creation Screen -->
+        <div id="team-creation-screen" class="hidden">
+            <div class="bg-white p-8 rounded-lg shadow-lg max-w-2xl mx-auto">
+                <h2 class="font-bangers text-4xl text-center mb-6">Create Your Team</h2>
+                <div class="mb-6">
+                    <label for="team-name-input" class="block text-sm font-medium text-gray-700 mb-2">Enter a custom team name:</label>
+                    <input type="text" id="team-name-input" class="w-full p-2 border border-gray-300 rounded-md" placeholder="e.g., The Backyard Ballers">
+                </div>
+                <p class="text-center text-gray-500 mb-4">...or choose one below</p>
+                <div id="premade-teams-grid" class="grid grid-cols-2 md:grid-cols-3 gap-4 mb-6">
+                    <!-- Premade team names will be inserted here -->
+                </div>
+                <button id="confirm-team-btn" class="w-full bg-green-500 text-white font-bold py-3 px-4 rounded-lg hover:bg-green-600 transition text-xl">Confirm Team & Start Draft</button>
+            </div>
+        </div>
+
 
         <!-- Draft Screen -->
         <div id="draft-screen" class="hidden">
             <h2 class="font-bangers text-4xl text-center mb-6">League Draft</h2>
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
-                <!-- Draft Info & Log -->
-                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
+                <!-- Draft Info & Player Detail -->
+                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md flex flex-col">
                     <div class="text-center p-4 border-b mb-4">
                          <p id="draft-clock-pick" class="text-sm text-gray-500">Round 1, Pick 1</p>
                          <h3 id="draft-clock-team" class="text-xl font-bold">Team on the Clock</h3>
                     </div>
-                    <h4 class="font-bold mb-2">Draft Log</h4>
-                    <ul id="draft-log" class="space-y-2 max-h-[45vh] overflow-y-auto text-sm">
-                        <!-- Draft picks will be logged here -->
-                    </ul>
+                    <div id="draft-player-detail" class="flex-grow">
+                        <p class="text-center text-gray-500 h-full flex items-center justify-center">Click a player to view their details</p>
+                    </div>
                 </div>
                 
                 <!-- Player Pool -->
                 <div class="lg:col-span-2 bg-white p-4 rounded-lg shadow-md">
                     <h3 class="text-xl font-bold mb-4">Available Players</h3>
-                    <div id="player-pool" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 max-h-[60vh] overflow-y-auto p-2">
+                    <div id="player-pool" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 max-h-[70vh] overflow-y-auto p-2">
                         <!-- Player cards will be inserted here by JS -->
                     </div>
                 </div>
 
                 <!-- Your Roster & Action -->
                 <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
+                     <h3 class="text-xl font-bold mb-2">Draft Log</h3>
+                    <ul id="draft-log" class="space-y-2 max-h-[45vh] overflow-y-auto text-sm mb-4">
+                        <!-- Draft picks will be logged here -->
+                    </ul>
                     <h3 class="text-xl font-bold mb-2">Your Roster</h3>
                     <ul id="team-roster" class="space-y-2 max-h-[45vh] overflow-y-auto">
                         <!-- Roster list items will be inserted here by JS -->
