--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="bg-white p-8 rounded-lg shadow-lg max-w-2xl mx-auto">
                 <h2 class="font-bangers text-4xl text-center mb-6">Create Your Team</h2>
                 <div class="mb-6">
-                    <label for="team-name-input" class="block text-sm font-medium text-gray-700 mb-2">Enter a custom team name:</label>
+                    <label for="team-name-input" class="block text-sm font-medium text-gray-700 mb-2">Enter your team name:</label>
                     <input type="text" id="team-name-input" class="w-full p-2 border border-gray-300 rounded-md" placeholder="e.g., The Backyard Ballers">
                 </div>
-                <p class="text-center text-gray-500 mb-4">...or choose one below</p>
+                <p class="text-center text-gray-500 mb-4">...or choose a name below</p>
                 <div id="premade-teams-grid" class="grid grid-cols-2 md:grid-cols-3 gap-4 mb-6">
                     <!-- Premade team names will be inserted here -->
                 </div>
@@ -54,36 +54,28 @@
         <!-- Draft Screen -->
         <div id="draft-screen" class="hidden">
             <h2 class="font-bangers text-4xl text-center mb-6">League Draft</h2>
-            <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
-                <!-- Draft Info & Player Detail -->
-                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md flex flex-col">
-                    <div class="text-center p-4 border-b mb-4">
-                         <p id="draft-clock-pick" class="text-sm text-gray-500">Round 1, Pick 1</p>
-                         <h3 id="draft-clock-team" class="text-xl font-bold">Team on the Clock</h3>
-                    </div>
-                    <div id="draft-player-detail" class="flex-grow">
-                        <p class="text-center text-gray-500 h-full flex items-center justify-center">Click a player to view their details</p>
-                    </div>
-                </div>
-                
-                <!-- Player Pool -->
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+                <!-- Player Spreadsheet -->
                 <div class="lg:col-span-2 bg-white p-4 rounded-lg shadow-md">
                     <h3 class="text-xl font-bold mb-4">Available Players</h3>
-                    <div id="player-pool" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4 max-h-[70vh] overflow-y-auto p-2">
-                        <!-- Player cards will be inserted here by JS -->
+                    <div id="player-pool" class="max-h-[75vh] overflow-y-auto">
+                        <!-- Spreadsheet will be inserted here by JS -->
                     </div>
                 </div>
 
-                <!-- Your Roster & Action -->
-                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
-                     <h3 class="text-xl font-bold mb-2">Draft Log</h3>
-                    <ul id="draft-log" class="space-y-2 max-h-[45vh] overflow-y-auto text-sm mb-4">
-                        <!-- Draft picks will be logged here -->
-                    </ul>
-                    <h3 class="text-xl font-bold mb-2">Your Roster</h3>
-                    <ul id="team-roster" class="space-y-2 max-h-[45vh] overflow-y-auto">
-                        <!-- Roster list items will be inserted here by JS -->
-                    </ul>
+                <!-- Draft Info & Roster -->
+                <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md flex flex-col">
+                    <div class="text-center p-4 border-b mb-4">
+                        <p id="draft-clock-pick" class="text-sm text-gray-500">Round 1, Pick 1</p>
+                        <h3 id="draft-clock-team" class="text-xl font-bold">Team on the Clock</h3>
+                    </div>
+                    <div class="flex-grow">
+                        <h4 class="font-bold mb-2">Draft Log</h4>
+                        <ul id="draft-log" class="space-y-2 max-h-[25vh] overflow-y-auto text-sm mb-4"></ul>
+                        
+                        <h4 class="font-bold mb-2">Your Roster</h4>
+                        <ul id="team-roster" class="space-y-2 max-h-[25vh] overflow-y-auto"></ul>
+                    </div>
                     <div class="mt-6">
                         <button id="draft-player-btn" class="w-full bg-green-500 text-white font-bold py-2 px-4 rounded-lg hover:bg-green-600 transition disabled:bg-gray-400">Draft Selected Player</button>
                     </div>
@@ -107,7 +99,7 @@
                 </div>
                 <div class="lg:col-span-1 bg-white p-4 rounded-lg shadow-md">
                     <div>
-                        <h3 class="text-xl font-bold mb-4">Your Roster</h3>
+                        <h3 class="text-xl font-bold mb-4">Your Roster (8 Players)</h3>
                         <div id="your-roster" class="max-h-48 overflow-y-auto"></div>
                     </div>
                     <div class="mt-4">
