--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
                         <select id="draft-filter-pos" class="p-2 border rounded">
                             <option value="">All Positions</option>
                             <option value="QB">QB</option>
-                            <option value="ATH">ATH</option>
-                            <option value="LINE">LINE</option>
+                            <option value="RB">RB</option>
+                            <option value="WR">WR</option>
+                            <option value="OL">OL</option>
+                            <option value="DL">DL</option>
+                            <option value="LB">LB</option>
+                            <option value="DB">DB</option>
                         </select>
                          <select id="draft-sort" class="p-2 border rounded">
                             <option value="default">Default</option>
@@ -86,6 +90,7 @@
                                     <th class="py-2 px-3">Cat</th>
                                     <th class="py-2 px-3">Blk</th>
                                     <th class="py-2 px-3">Tck</th>
+                                    <th class="py-2 px-3">BlS</th>
                                 </tr>
                             </thead>
                             <tbody id="draft-pool-tbody" class="divide-y">
