--- a/index.html
+++ b/index.html
@@ -106,10 +106,13 @@
                     </div>
                     <button id="draft-player-btn" class="w-full bg-amber-500 text-white font-bold py-3 rounded-lg disabled:bg-gray-400">Draft Player</button>
                     <div class="mt-4">
-                        <h4 class="font-bold text-lg">Your Roster (<span id="roster-count">0</span>/8)</h4>
-                        <ul id="draft-roster-list" class="mt-2 bg-gray-50 rounded-lg divide-y h-96 overflow-y-auto">
+                        <h4 class="font-bold text-lg">Your Roster (<span id="roster-count">0</span>/10)</h4>
+                        <ul id="draft-roster-list" class="mt-2 bg-gray-50 rounded-lg divide-y h-64 overflow-y-auto">
                             <!-- Roster players will be injected here -->
                         </ul>
+                         <div id="roster-summary" class="mt-4 p-2 bg-gray-100 rounded">
+                            <!-- Roster summary will be injected here -->
+                         </div>
                     </div>
                 </div>
             </div>
