--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 <option value="tackles">Tackles</option>
                             </select>
                             <select id="stats-filter-pos" class="p-2 border rounded">
-                                <option value="">All Players</option>
+                                <option value="">All Positions</option>
                                 <option value="QB">QB</option>
                                 <option value="RB">RB</option>
                                 <option value="WR">WR</option>
@@ -224,6 +224,12 @@
                                 <option value="DL">DL</option>
                                 <option value="LB">LB</option>
                                 <option value="DB">DB</option>
+                            </select>
+                            <!-- NEW TEAM FILTER -->
+                            <select id="stats-filter-team" class="p-2 border rounded">
+                                <option value="all">All Teams</option>
+                                <option value="mine">My Team</option>
+                                <option value="others">Other Teams</option>
                             </select>
                         </div>
                         <div id="player-stats-container"></div>
